@@ -1,4 +1,4 @@
-.\" RCSid "$Id: rcomb.1,v 1.10 2024/06/28 21:04:49 greg Exp $"
+.\" RCSid "$Id: rcomb.1,v 1.11 2024/10/01 01:16:26 greg Exp $"
 .TH RCOMB 12/5/2023 RADIANCE
 .SH NAME
 rcomb - combine and convert matrices a row at a time
@@ -349,6 +349,6 @@ circumstances where it would make sense to.
 Greg Ward
 .SH "SEE ALSO"
 dctimestep(1), icalc(1), getinfo(1), pcomb(1), pfilt(1),
-ra_xyze(1), rcalc(1),
+ra_rgbe(1), ra_xyze(1), rcalc(1),
 rcollate(1), rcontrib(1), rcrop(1), rfluxmtx(1), 
 rmtxop(1), rtpict(1), rtrace(1), vwrays(1)
